Avoid wrapping text

--- a/TweetCopter/public/stylesheets/style.css
+++ b/TweetCopter/public/stylesheets/style.css
@@ -66,6 +66,7 @@ a {
 .twit-info {
     float: left;
     padding-left:1em;
+    width: 80%;
 }
 .twit-name {
     float: left;
